# raindrops-rs

./: Cargo.toml
src/: main.rs  raindrop.rs
