[package]
name = "raindrops-rs"
version = "0.1.0"
authors = ["h5p9sl <21267024+h5p9sl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "*"
piston2d-graphics = "*"
piston2d-glium_graphics = "*"
glium = "*"
rand = "*"
